--- a/traefik/.env.example
+++ b/traefik/.env.example
@@ -1,3 +1,3 @@
 TRAEFIK_WEB_ENTRYPOINT_HOST_PORT=80
 
-TRAEFIK_DASHBOARD_HOST_NAME="traefik.blumilk.localhost"
+TRAEFIK_DASHBOARD_HOST_NAME="traefik.vama.localhost"
